@startuml

package entities {

class User {
- userID: int
- firstName: String
- lastName: String
- role: String
- email: String
- password: String
- balance: double

+ getUserID(): int
+ getFirstName(): String
+ getLastName(): String
+ getRole(): String
+ getEmail(): String
+ getPassword(): String
+ getBalance(): double
+ setBalance(): double
}

class Client {
+ login(): User
+ createClient(): User
+ createCupcake(): CupCake
+ setBasket(): double
}

class Admin {
+ createAdmin(): User
+ getOrder(): Order
+ getCustomer(): User
+ setBalance(): double
}

class Base {
- variant: String
- price: double

+ getVariant(): String
+ getPrice(): double
}

class Topping {
- variant: String
- price: double

+ getVariant(): String
+ getPrice(): double
}


class Cupcake {
- id: int
- baseId: int
- baseName: String
- toppingId: int
- toppingName: String
- price: double
- amount: int

+ getId(): int
+ getBaseId(): int
+ getBaseName(): String
+ getToppingId(): int
+ getToppingName(): String
+ getPrice(): double
+ getAmount(): int
+ setAmount(): int

}

class Basket {

}

class CupcakeList {
- cupcakeList: List<Cupcake>
+ addCupcake(cupcake: Cupcake): void
+ getCupcakeList(): List<Cupcake>
}

class Order {
- orderId: int
- userId: int
- date: String
- price: double
- paid: boolean

+ Har getter... Udfyld
}

class OrderList {
- orderList: List<Order>
+ addOrder(order: Order): void
+ getOrderList(): List<Order>
+ getOrderById(): Order
+ getOrderByUserId(): Order
}
}

package config {
class SessionConfig {
+ sessionConfig(): SessionHandler
}

class ThymeleafConfig {
+ templateEngine(): TemplateEngine
}
}

package persistence {
class ConnectionPool {
- instance: ConnectionPool
- ds: HikariDataSource
- LOGGER: Logger

+ getInstance(): ConnectionPool
+ getConnection(): Connection
- createHikariConnectionPool(): HikariDataSource
}

class UserMapper {
+ login(): User
+ createAccount(): boolean
}

class CupcakeMapper {
- cp: ConnectionPool
+ generateCupcake(): void
+ getAllCupcakes(cupcake: List<Cupcake>): void
}

class OrderMapper {
+ getAllOrders(): void
+ registerOrder(): void
}

class BaseMapper{
- cp: ConnectionPool
+ getAllBases(): List<Base>
}

class ToppingMapper{
- cp: ConnectionPool
+ getAllToppings(): List<Topping>
}
}

package controllers {
class AdminController {
- app: Javalin
- connectionPool: ConnectionPool
+ addRoutes(): void
+ createAdmin(): Admin
+ getOrder(): Order
+ getCustomer(): Client
+ setBalance(): double
}
class ClientController{
- app: Javalin
- connectionPool: ConnectionPool
+ addRoutes(): void
+ login(): User
+ createClient(): Client
+ createCupcake(): CupCake
+ setBasket(): Basket
}


}

package service{
class Calculator(){
}
}

class Main{
- USER: String
- PASSWORD: String
- URL: String
- DB: String
- connectionPool: ConnectionPool
+ static main(): void
}

AdminController --> ConnectionPool
AdminController --> Javalin
AdminController ..> Admin
AdminController ..> Order
AdminController ..> Client

ClientController --> ConnectionPool
ClientController --> Javalin
ClientController --* UserMapper
ClientController ..> User
ClientController ..> Client
ClientController ..> Cupcake
ClientController ..> Basket

User --|> Admin
User --|> Client
CupcakeList --> Cupcake
OrderList --> Order

BaseMapper --> ConnectionPool
BaseMapper ..> Base

ConnectionPool --* ConnectionPool
ConnectionPool --* HikariDataSource
ConnectionPool --> Logger

CupcakeMapper --> ConnectionPool
CupcakeMapper ..> CupcakeList
CupcakeMapper ..> Cupcake

OrderMapper --> ConnectionPool
OrderMapper ..> OrderList
OrderMapper ..> Order

ToppingMapper --> ConnectionPool
ToppingMapper ..> Topping

UserMapper --> ConnectionPool
UserMapper ..> User
UserMapper ..> Admin
UserMapper ..> Client

Main --> ConnectionPool
Main --> SessionConfig
Main --> ThymeleafConfig

 '///// JAVA CODE IN THESE !WILL! BE CHANGED ////
 Main -up-> AdminController
 Main --> ClientController
 Main ---> UserMapper
 Main ---> CupcakeMapper
 Main --> CupcakeList
 Main ---> OrderMapper
 Main --> OrderList
 '////////////////////////////////////////////

@enduml